# intrinsic-value-calc

./: .gitignore  COMPANY_DATA_CREATION_GUIDE.md  README.md  TECHNICAL_OVERVIEW.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
data/: aapl.json  afl.json  bac.json  bbwi.json  cat.json  cb.json  cost.json  ctas.json  cybr.json  etsy.json  goog.json  hd.json  ko.json  lly.json  mdlz.json  mdt.json  meta.json  mnst.json  mrk.json  nvda.json  nvo.json  orly.json  oxy.json  pep.json  sny.json  syy.json  template.json
python/: IMPLEMENTATION_SUMMARY.md  INDUSTRY_WEIGHTS_DOCUMENTATION.md  MODULAR_ARCHITECTURE_SUMMARY.md  MODULAR_DESIGN.md  README.md  STANDARDIZATION_ANALYSIS.md  TRANSFORMATION_SUMMARY.md  compare.py  debug_ebitda.py  debug_fcf_order.py  debug_nvo.py  requirements.txt
python/src/: DATA_CALCULATOR_README.md  __init__.py  calculate.py  calculate_modular.py  data_calculator.py  debug_modular.py  valuation_calculator.py  valuation_calculator_modular.py
python/src/data/: currency_converter.py  data_loader.py  data_validator.py  standardization_integrator.py  standardized_assumptions.py
python/src/models/: company_data.py  risk_metrics.py  valuation_result.py
python/src/risk/: risk_analyzer.py
python/src/utils/: financial_calculations.py  math_utils.py
python/src/valuation/: asset_valuation.py  dcf_valuation.py  earnings_valuation.py  relative_valuation.py
python/tests/: test_valuation_calculator.py
src/: ValuationCalculator.js  app.js  calculate.js  companyBuilder.js
tests/: ValuationCalculator.test.js
